# birch

./: .clang-format  CMakeLists.txt
birch/birch/: main.swift
birch/birch.xcodeproj/: project.pbxproj
birch/birch.xcodeproj/project.xcworkspace/xcuserdata/devinr.xcuserdatad/: UserInterfaceState.xcuserstate
birch/birch.xcodeproj/xcuserdata/devinr.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake/: FileEmbed.cmake
include/birch/: init.h  window.h
sandbox/: CMakeLists.txt
sandbox/src/: main.c
src/: init.h  main.c  window.c  window.h
src/platform/macos/: macosInit.m  macosWindow.m  shaderTypes.h  shaders.metal
src/platform/win32/: win32init.c  win32window.c
